// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<DocumentFragment>
  <script
    class="structured_data"
    type="application/ld+json"
  >
    {"@context":"https://schema.org","@type":"HowTo","steps":[{"@type":"HowToStep","text":"Connect to a MongoDB deployment hosted on MongoDB Atlas, or a deployment hosted locally on your own machine.To learn more, see Connect to MongoDB","name":"Connect to your deployment"},{"@type":"HowToStep","text":"Import data from CSV or JSON files into your MongoDB database.To learn more, see Import and Export Data","name":"Import your data"}],"name":"Connect to a MongoDB deployment hosted on MongoDB Atlas","image":"https://webimages.mongodb.com/_com_assets/cms/kuyj2focmkbxv7gh3-stacked_default_slate_blue.svg?auto=format%252Ccompress"}
  </script>
  .emotion-0 {
  margin-top: 16px;
}

.dark-theme .emotion-0 {
  color: #E8EDEB;
  background-color: #001E2B;
}

@media only screen and (max-width: 1024px) {
  .emotion-0 {
    padding-bottom: 32px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    padding-bottom: 24px;
  }
}

.emotion-1 {
  position: relative;
  gap: 33px;
}

.emotion-1 h2,
.emotion-1 h3,
.emotion-1 h4 {
  margin-top: 4px;
}

.emotion-1:not(:last-child):before {
  content: '';
  border-left: 2px dashed #E8EDEB;
  bottom: 0;
  left: 16px;
  position: absolute;
  top: 0;
}

.dark-theme .emotion-1:not(:last-child):before {
  border-left-color: #5C6C75;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  position: relative;
  min-height: 59px;
}

.emotion-4 {
  position: relative;
  font-weight: bold;
  background-color: #E3FCF7;
  color: #00684A;
  height: 34px;
  width: 34px;
}

.dark-theme .emotion-4 {
  background-color: #00684A;
  color: #E8EDEB;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  padding-bottom: 64px;
}

@media only screen and (max-width: 767px) {
  .emotion-6 {
    padding-bottom: 40px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-6 {
    padding-bottom: 32px;
  }
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.emotion-8 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
  color: var(--font-color-primary);
}

.emotion-8 strong,
.emotion-8 b {
  font-weight: 700;
}

.emotion-10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-10>span>code,
.emotion-10>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-10:focus,
.emotion-10:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-10:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-10:hover {
  text-decoration-color: #E8EDEB;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          1
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <p
          class="emotion-8"
        >
          Connect to a MongoDB deployment hosted on MongoDB Atlas, or a deployment hosted locally on your own machine.
        </p>
        <p
          class="emotion-8"
        >
          <a
            class="emotion-10"
            href="/connect/#std-label-connect-run-compass"
          >
            To learn more, see Connect to MongoDB
          </a>
        </p>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          2
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <p
          class="emotion-8"
        >
          Import data from CSV or JSON files into your MongoDB database.
        </p>
        <p
          class="emotion-8"
        >
          <a
            class="emotion-10"
            href="/import-export/#std-label-compass-import-export"
          >
            To learn more, see Import and Export Data
          </a>
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders steps nested in include nodes 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-top: 16px;
}

.dark-theme .emotion-0 {
  color: #E8EDEB;
  background-color: #001E2B;
}

@media only screen and (max-width: 1024px) {
  .emotion-0 {
    padding-bottom: 32px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    padding-bottom: 24px;
  }
}

.emotion-1 {
  position: relative;
  gap: 33px;
}

.emotion-1 h2,
.emotion-1 h3,
.emotion-1 h4 {
  margin-top: 4px;
}

.emotion-1:not(:last-child):before {
  content: '';
  border-left: 2px dashed #E8EDEB;
  bottom: 0;
  left: 16px;
  position: absolute;
  top: 0;
}

.dark-theme .emotion-1:not(:last-child):before {
  border-left-color: #5C6C75;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  position: relative;
  min-height: 59px;
}

.emotion-4 {
  position: relative;
  font-weight: bold;
  background-color: #E3FCF7;
  color: #00684A;
  height: 34px;
  width: 34px;
}

.dark-theme .emotion-4 {
  background-color: #00684A;
  color: #E8EDEB;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  padding-bottom: 64px;
}

@media only screen and (max-width: 767px) {
  .emotion-6 {
    padding-bottom: 40px;
  }
}

@media only screen and (max-width: 480px) {
  .emotion-6 {
    padding-bottom: 32px;
  }
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-column-gap: 5px;
  column-gap: 5px;
}

.emotion-9 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 32px;
  line-height: 40px;
  font-weight: 400;
  font-family: 'MongoDB Value Serif','Times New Roman',serif;
  color: #00684A;
  margin-top: 24px;
  margin-bottom: 8px;
  color: var(--heading-color-primary);
  margin-top: 16px;
  margin-bottom: 24px;
}

.emotion-10 {
  position: absolute;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 0 10px;
  visibility: hidden;
}

.emotion-11 {
  color: #889397;
  vertical-align: middle;
  margin-top: -2px;
}

.emotion-12 {
  display: inline;
  left: 0;
  top: 0;
  margin-top: -85px;
  position: absolute;
  padding-bottom: 2px;
}

@media only screen and (max-width: 767px) {
  .emotion-12 {
    margin-top: -85px;
  }
}

.emotion-13 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-width: 175px;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: end;
  justify-content: end;
}

.emotion-13 [data-theme] {
  width: 310px;
  background-color: #001E2B;
}

@media only screen and (max-width: 1024px) {
  .emotion-13 {
    display: none;
  }
}

.emotion-14 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 1px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  border-radius: 6px;
  background-color: #F9FBFA;
  border-color: #889397;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  height: 28px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 0px;
  z-index: 1;
}

.emotion-14:focus-visible,
.emotion-14[data-focus="true"] {
  outline: none;
}

.emotion-14:active,
.emotion-14[data-active="true"],
.emotion-14:focus,
.emotion-14:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-14:focus-visible,
.emotion-14[data-focus="true"] {
  color: #001E2B;
}

.emotion-14:hover,
.emotion-14[data-hover="true"],
.emotion-14:active,
.emotion-14[data-active="true"] {
  color: #001E2B;
  background-color: #FFFFFF;
  box-shadow: 0 0 0 3px #E8EDEB;
}

.emotion-14:focus-visible,
.emotion-14[data-focus="true"] {
  background-color: #FFFFFF;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-14,
.emotion-14:hover,
.emotion-14:focus,
.emotion-14:focus-visible,
.emotion-14:active {
  border-right-color: #889397;
}

.emotion-15 {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 5px;
}

.emotion-16 {
  display: grid;
  grid-auto-flow: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 0;
  -webkit-transition: all 150 ease-in-out;
  transition: all 150 ease-in-out;
  padding: 0 11px;
  gap: 6px;
}

.emotion-17 {
  color: #889397;
  height: 16px;
  width: 16px;
  justify-self: right;
}

.emotion-18 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 1px solid transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-transition: all 150ms ease-in-out;
  transition: all 150ms ease-in-out;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  z-index: 0;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  border-radius: 6px;
  background-color: #F9FBFA;
  border-color: #889397;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  font-weight: 500;
  height: 28px;
  border-top-left-radius: 0px;
  border-bottom-left-radius: 0px;
  margin-left: -1px;
  width: 32px;
}

.emotion-18:focus-visible,
.emotion-18[data-focus="true"] {
  outline: none;
}

.emotion-18:active,
.emotion-18[data-active="true"],
.emotion-18:focus,
.emotion-18:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-18:focus-visible,
.emotion-18[data-focus="true"] {
  color: #001E2B;
}

.emotion-18:hover,
.emotion-18[data-hover="true"],
.emotion-18:active,
.emotion-18[data-active="true"] {
  color: #001E2B;
  background-color: #FFFFFF;
  box-shadow: 0 0 0 3px #E8EDEB;
}

.emotion-18:focus-visible,
.emotion-18[data-focus="true"] {
  background-color: #FFFFFF;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-18:focus,
.emotion-18:focus-visible,
.emotion-18:hover {
  z-index: 1;
}

.emotion-18,
.emotion-18:hover,
.emotion-18:focus,
.emotion-18:focus-visible,
.emotion-18:active {
  border-left-color: #889397;
}

.emotion-18 svg {
  color: #3D4F58;
}

.emotion-21 {
  color: #001E2B;
  height: 16px;
  width: 16px;
  justify-self: right;
}

.emotion-21 .lg-ui-button-0000:hover,
.emotion-21 .lg-ui-button-0000:active {
  color: currentColor;
}

.emotion-22 {
  display: none;
}

.emotion-23 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
  color: var(--font-color-primary);
}

.emotion-23 strong,
.emotion-23 b {
  font-weight: 700;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          1
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <section>
          <div
            class="emotion-8"
          >
            <h1
              class="contains-headerlink emotion-9"
              weight="medium"
            >
              Step 1
              <a
                class="headerlink emotion-10"
                href="#step-1"
                title="Permalink to this heading"
              >
                <svg
                  aria-label="Link Icon"
                  class="emotion-11"
                  fill="none"
                  height="12"
                  role="img"
                  viewBox="0 0 16 16"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.039 9.953a3.596 3.596 0 0 1-.327-.38l1.45-1.445a1.553 1.553 0 0 0 2.496.423l2.885-2.87a1.57 1.57 0 0 0 .01-2.213 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.542 3.542 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.542 3.542 0 0 1-5.025-.022Z"
                    fill="currentColor"
                  />
                  <path
                    d="M9.961 6.047c.12.12.228.248.327.38l-1.45 1.445a1.553 1.553 0 0 0-2.496-.423l-2.885 2.87a1.57 1.57 0 0 0-.01 2.213 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.542 3.542 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.542 3.542 0 0 1 5.025.022Z"
                    fill="currentColor"
                  />
                </svg>
                <div
                  class="emotion-12"
                  id="step-1"
                />
              </a>
            </h1>
            <div
              class="emotion-13"
              data-lgid="lg-split_button"
              data-testid="lg-split_button"
            >
              <button
                aria-disabled="false"
                class="lg-ui-button-0000 emotion-14"
                data-lgid="lg-split_button-button"
                data-testid="lg-split_button-button"
                type="button"
              >
                <div
                  class="emotion-15"
                />
                <div
                  class="emotion-16"
                >
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="emotion-17"
                    fill="none"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M1 5.714v4.572C1 11.233 1.768 12 2.714 12H5.75V7.11c0-.566.227-1.108.63-1.504l2.294-2.252c.1-.099.21-.186.326-.262v-.378C9 1.768 8.232 1 7.286 1H5.8v3.429c0 .71-.576 1.285-1.286 1.285H1Zm8-.928L7.257 6.498A.857.857 0 0 0 7 7.11v.688h3.01a.857.857 0 0 0 .857-.858V4h-.717a.857.857 0 0 0-.6.246l-.55.54ZM4.867 1H4.15a.857.857 0 0 0-.601.246L1.257 3.498A.857.857 0 0 0 1 4.11v.688h3.01a.857.857 0 0 0 .857-.858V1ZM7 12V8.714H10.514c.71 0 1.286-.575 1.286-1.285V4h1.486C14.233 4 15 4.768 15 5.714v7.572c0 .947-.768 1.714-1.714 1.714H8.714A1.714 1.714 0 0 1 7 13.286V12Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  Copy page
                </div>
              </button>
              <button
                aria-controls=""
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="More options"
                class="lg-ui-button-0000 emotion-18"
                data-lgid="lg-split_button-trigger"
                data-testid="lg-split_button-trigger"
                type="button"
              >
                <div
                  class="emotion-15"
                />
                <div
                  class="emotion-16"
                >
                  <svg
                    aria-label="Caret Down Icon"
                    class="emotion-21"
                    fill="none"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.679 10.796a.554.554 0 0 1-.858 0L4.64 6.976C4.32 6.594 4.582 6 5.069 6h6.362c.487 0 .748.594.43.976l-3.182 3.82Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </button>
              <span
                class="emotion-22"
              />
            </div>
          </div>
          <p
            class="emotion-23"
          >
            Content for step 1
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          2
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <section>
          <div
            class="emotion-8"
          >
            <h1
              class="contains-headerlink emotion-9"
              weight="medium"
            >
              Step 2
              <a
                class="headerlink emotion-10"
                href="#step-2"
                title="Permalink to this heading"
              >
                <svg
                  aria-label="Link Icon"
                  class="emotion-11"
                  fill="none"
                  height="12"
                  role="img"
                  viewBox="0 0 16 16"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.039 9.953a3.596 3.596 0 0 1-.327-.38l1.45-1.445a1.553 1.553 0 0 0 2.496.423l2.885-2.87a1.57 1.57 0 0 0 .01-2.213 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.542 3.542 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.542 3.542 0 0 1-5.025-.022Z"
                    fill="currentColor"
                  />
                  <path
                    d="M9.961 6.047c.12.12.228.248.327.38l-1.45 1.445a1.553 1.553 0 0 0-2.496-.423l-2.885 2.87a1.57 1.57 0 0 0-.01 2.213 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.542 3.542 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.542 3.542 0 0 1 5.025.022Z"
                    fill="currentColor"
                  />
                </svg>
                <div
                  class="emotion-12"
                  id="step-2"
                />
              </a>
            </h1>
            <div
              class="emotion-13"
              data-lgid="lg-split_button"
              data-testid="lg-split_button"
            >
              <button
                aria-disabled="false"
                class="lg-ui-button-0000 emotion-14"
                data-lgid="lg-split_button-button"
                data-testid="lg-split_button-button"
                type="button"
              >
                <div
                  class="emotion-15"
                />
                <div
                  class="emotion-16"
                >
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="emotion-17"
                    fill="none"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M1 5.714v4.572C1 11.233 1.768 12 2.714 12H5.75V7.11c0-.566.227-1.108.63-1.504l2.294-2.252c.1-.099.21-.186.326-.262v-.378C9 1.768 8.232 1 7.286 1H5.8v3.429c0 .71-.576 1.285-1.286 1.285H1Zm8-.928L7.257 6.498A.857.857 0 0 0 7 7.11v.688h3.01a.857.857 0 0 0 .857-.858V4h-.717a.857.857 0 0 0-.6.246l-.55.54ZM4.867 1H4.15a.857.857 0 0 0-.601.246L1.257 3.498A.857.857 0 0 0 1 4.11v.688h3.01a.857.857 0 0 0 .857-.858V1ZM7 12V8.714H10.514c.71 0 1.286-.575 1.286-1.285V4h1.486C14.233 4 15 4.768 15 5.714v7.572c0 .947-.768 1.714-1.714 1.714H8.714A1.714 1.714 0 0 1 7 13.286V12Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  Copy page
                </div>
              </button>
              <button
                aria-controls=""
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="More options"
                class="lg-ui-button-0000 emotion-18"
                data-lgid="lg-split_button-trigger"
                data-testid="lg-split_button-trigger"
                type="button"
              >
                <div
                  class="emotion-15"
                />
                <div
                  class="emotion-16"
                >
                  <svg
                    aria-label="Caret Down Icon"
                    class="emotion-21"
                    fill="none"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.679 10.796a.554.554 0 0 1-.858 0L4.64 6.976C4.32 6.594 4.582 6 5.069 6h6.362c.487 0 .748.594.43.976l-3.182 3.82Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </button>
              <span
                class="emotion-22"
              />
            </div>
          </div>
          <p
            class="emotion-23"
          >
            Content for step 2
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          3
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <section>
          <div
            class="emotion-8"
          >
            <h1
              class="contains-headerlink emotion-9"
              weight="medium"
            >
              Step 3
              <a
                class="headerlink emotion-10"
                href="#step-3"
                title="Permalink to this heading"
              >
                <svg
                  aria-label="Link Icon"
                  class="emotion-11"
                  fill="none"
                  height="12"
                  role="img"
                  viewBox="0 0 16 16"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.039 9.953a3.596 3.596 0 0 1-.327-.38l1.45-1.445a1.553 1.553 0 0 0 2.496.423l2.885-2.87a1.57 1.57 0 0 0 .01-2.213 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.542 3.542 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.542 3.542 0 0 1-5.025-.022Z"
                    fill="currentColor"
                  />
                  <path
                    d="M9.961 6.047c.12.12.228.248.327.38l-1.45 1.445a1.553 1.553 0 0 0-2.496-.423l-2.885 2.87a1.57 1.57 0 0 0-.01 2.213 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.542 3.542 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.542 3.542 0 0 1 5.025.022Z"
                    fill="currentColor"
                  />
                </svg>
                <div
                  class="emotion-12"
                  id="step-3"
                />
              </a>
            </h1>
            <div
              class="emotion-13"
              data-lgid="lg-split_button"
              data-testid="lg-split_button"
            >
              <button
                aria-disabled="false"
                class="lg-ui-button-0000 emotion-14"
                data-lgid="lg-split_button-button"
                data-testid="lg-split_button-button"
                type="button"
              >
                <div
                  class="emotion-15"
                />
                <div
                  class="emotion-16"
                >
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="emotion-17"
                    fill="none"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M1 5.714v4.572C1 11.233 1.768 12 2.714 12H5.75V7.11c0-.566.227-1.108.63-1.504l2.294-2.252c.1-.099.21-.186.326-.262v-.378C9 1.768 8.232 1 7.286 1H5.8v3.429c0 .71-.576 1.285-1.286 1.285H1Zm8-.928L7.257 6.498A.857.857 0 0 0 7 7.11v.688h3.01a.857.857 0 0 0 .857-.858V4h-.717a.857.857 0 0 0-.6.246l-.55.54ZM4.867 1H4.15a.857.857 0 0 0-.601.246L1.257 3.498A.857.857 0 0 0 1 4.11v.688h3.01a.857.857 0 0 0 .857-.858V1ZM7 12V8.714H10.514c.71 0 1.286-.575 1.286-1.285V4h1.486C14.233 4 15 4.768 15 5.714v7.572c0 .947-.768 1.714-1.714 1.714H8.714A1.714 1.714 0 0 1 7 13.286V12Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  Copy page
                </div>
              </button>
              <button
                aria-controls=""
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="More options"
                class="lg-ui-button-0000 emotion-18"
                data-lgid="lg-split_button-trigger"
                data-testid="lg-split_button-trigger"
                type="button"
              >
                <div
                  class="emotion-15"
                />
                <div
                  class="emotion-16"
                >
                  <svg
                    aria-label="Caret Down Icon"
                    class="emotion-21"
                    fill="none"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.679 10.796a.554.554 0 0 1-.858 0L4.64 6.976C4.32 6.594 4.582 6 5.069 6h6.362c.487 0 .748.594.43.976l-3.182 3.82Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </button>
              <span
                class="emotion-22"
              />
            </div>
          </div>
          <p
            class="emotion-23"
          >
            Content for step 3
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          4
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <section>
          <div
            class="emotion-8"
          >
            <h1
              class="contains-headerlink emotion-9"
              weight="medium"
            >
              Step 4
              <a
                class="headerlink emotion-10"
                href="#step-4"
                title="Permalink to this heading"
              >
                <svg
                  aria-label="Link Icon"
                  class="emotion-11"
                  fill="none"
                  height="12"
                  role="img"
                  viewBox="0 0 16 16"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.039 9.953a3.596 3.596 0 0 1-.327-.38l1.45-1.445a1.553 1.553 0 0 0 2.496.423l2.885-2.87a1.57 1.57 0 0 0 .01-2.213 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.542 3.542 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.542 3.542 0 0 1-5.025-.022Z"
                    fill="currentColor"
                  />
                  <path
                    d="M9.961 6.047c.12.12.228.248.327.38l-1.45 1.445a1.553 1.553 0 0 0-2.496-.423l-2.885 2.87a1.57 1.57 0 0 0-.01 2.213 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.542 3.542 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.542 3.542 0 0 1 5.025.022Z"
                    fill="currentColor"
                  />
                </svg>
                <div
                  class="emotion-12"
                  id="step-4"
                />
              </a>
            </h1>
            <div
              class="emotion-13"
              data-lgid="lg-split_button"
              data-testid="lg-split_button"
            >
              <button
                aria-disabled="false"
                class="lg-ui-button-0000 emotion-14"
                data-lgid="lg-split_button-button"
                data-testid="lg-split_button-button"
                type="button"
              >
                <div
                  class="emotion-15"
                />
                <div
                  class="emotion-16"
                >
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="emotion-17"
                    fill="none"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M1 5.714v4.572C1 11.233 1.768 12 2.714 12H5.75V7.11c0-.566.227-1.108.63-1.504l2.294-2.252c.1-.099.21-.186.326-.262v-.378C9 1.768 8.232 1 7.286 1H5.8v3.429c0 .71-.576 1.285-1.286 1.285H1Zm8-.928L7.257 6.498A.857.857 0 0 0 7 7.11v.688h3.01a.857.857 0 0 0 .857-.858V4h-.717a.857.857 0 0 0-.6.246l-.55.54ZM4.867 1H4.15a.857.857 0 0 0-.601.246L1.257 3.498A.857.857 0 0 0 1 4.11v.688h3.01a.857.857 0 0 0 .857-.858V1ZM7 12V8.714H10.514c.71 0 1.286-.575 1.286-1.285V4h1.486C14.233 4 15 4.768 15 5.714v7.572c0 .947-.768 1.714-1.714 1.714H8.714A1.714 1.714 0 0 1 7 13.286V12Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  Copy page
                </div>
              </button>
              <button
                aria-controls=""
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="More options"
                class="lg-ui-button-0000 emotion-18"
                data-lgid="lg-split_button-trigger"
                data-testid="lg-split_button-trigger"
                type="button"
              >
                <div
                  class="emotion-15"
                />
                <div
                  class="emotion-16"
                >
                  <svg
                    aria-label="Caret Down Icon"
                    class="emotion-21"
                    fill="none"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.679 10.796a.554.554 0 0 1-.858 0L4.64 6.976C4.32 6.594 4.582 6 5.069 6h6.362c.487 0 .748.594.43.976l-3.182 3.82Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </button>
              <span
                class="emotion-22"
              />
            </div>
          </div>
          <p
            class="emotion-23"
          >
            Content for step 4
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          5
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <section>
          <div
            class="emotion-8"
          >
            <h1
              class="contains-headerlink emotion-9"
              weight="medium"
            >
              Step 5
              <a
                class="headerlink emotion-10"
                href="#step-5"
                title="Permalink to this heading"
              >
                <svg
                  aria-label="Link Icon"
                  class="emotion-11"
                  fill="none"
                  height="12"
                  role="img"
                  viewBox="0 0 16 16"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.039 9.953a3.596 3.596 0 0 1-.327-.38l1.45-1.445a1.553 1.553 0 0 0 2.496.423l2.885-2.87a1.57 1.57 0 0 0 .01-2.213 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.542 3.542 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.542 3.542 0 0 1-5.025-.022Z"
                    fill="currentColor"
                  />
                  <path
                    d="M9.961 6.047c.12.12.228.248.327.38l-1.45 1.445a1.553 1.553 0 0 0-2.496-.423l-2.885 2.87a1.57 1.57 0 0 0-.01 2.213 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.542 3.542 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.542 3.542 0 0 1 5.025.022Z"
                    fill="currentColor"
                  />
                </svg>
                <div
                  class="emotion-12"
                  id="step-5"
                />
              </a>
            </h1>
            <div
              class="emotion-13"
              data-lgid="lg-split_button"
              data-testid="lg-split_button"
            >
              <button
                aria-disabled="false"
                class="lg-ui-button-0000 emotion-14"
                data-lgid="lg-split_button-button"
                data-testid="lg-split_button-button"
                type="button"
              >
                <div
                  class="emotion-15"
                />
                <div
                  class="emotion-16"
                >
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="emotion-17"
                    fill="none"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M1 5.714v4.572C1 11.233 1.768 12 2.714 12H5.75V7.11c0-.566.227-1.108.63-1.504l2.294-2.252c.1-.099.21-.186.326-.262v-.378C9 1.768 8.232 1 7.286 1H5.8v3.429c0 .71-.576 1.285-1.286 1.285H1Zm8-.928L7.257 6.498A.857.857 0 0 0 7 7.11v.688h3.01a.857.857 0 0 0 .857-.858V4h-.717a.857.857 0 0 0-.6.246l-.55.54ZM4.867 1H4.15a.857.857 0 0 0-.601.246L1.257 3.498A.857.857 0 0 0 1 4.11v.688h3.01a.857.857 0 0 0 .857-.858V1ZM7 12V8.714H10.514c.71 0 1.286-.575 1.286-1.285V4h1.486C14.233 4 15 4.768 15 5.714v7.572c0 .947-.768 1.714-1.714 1.714H8.714A1.714 1.714 0 0 1 7 13.286V12Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  Copy page
                </div>
              </button>
              <button
                aria-controls=""
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="More options"
                class="lg-ui-button-0000 emotion-18"
                data-lgid="lg-split_button-trigger"
                data-testid="lg-split_button-trigger"
                type="button"
              >
                <div
                  class="emotion-15"
                />
                <div
                  class="emotion-16"
                >
                  <svg
                    aria-label="Caret Down Icon"
                    class="emotion-21"
                    fill="none"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.679 10.796a.554.554 0 0 1-.858 0L4.64 6.976C4.32 6.594 4.582 6 5.069 6h6.362c.487 0 .748.594.43.976l-3.182 3.82Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </button>
              <span
                class="emotion-22"
              />
            </div>
          </div>
          <p
            class="emotion-23"
          >
            Content for step 5
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          6
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <section>
          <div
            class="emotion-8"
          >
            <h1
              class="contains-headerlink emotion-9"
              weight="medium"
            >
              Step 6
              <a
                class="headerlink emotion-10"
                href="#step-6"
                title="Permalink to this heading"
              >
                <svg
                  aria-label="Link Icon"
                  class="emotion-11"
                  fill="none"
                  height="12"
                  role="img"
                  viewBox="0 0 16 16"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.039 9.953a3.596 3.596 0 0 1-.327-.38l1.45-1.445a1.553 1.553 0 0 0 2.496.423l2.885-2.87a1.57 1.57 0 0 0 .01-2.213 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.542 3.542 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.542 3.542 0 0 1-5.025-.022Z"
                    fill="currentColor"
                  />
                  <path
                    d="M9.961 6.047c.12.12.228.248.327.38l-1.45 1.445a1.553 1.553 0 0 0-2.496-.423l-2.885 2.87a1.57 1.57 0 0 0-.01 2.213 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.542 3.542 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.542 3.542 0 0 1 5.025.022Z"
                    fill="currentColor"
                  />
                </svg>
                <div
                  class="emotion-12"
                  id="step-6"
                />
              </a>
            </h1>
            <div
              class="emotion-13"
              data-lgid="lg-split_button"
              data-testid="lg-split_button"
            >
              <button
                aria-disabled="false"
                class="lg-ui-button-0000 emotion-14"
                data-lgid="lg-split_button-button"
                data-testid="lg-split_button-button"
                type="button"
              >
                <div
                  class="emotion-15"
                />
                <div
                  class="emotion-16"
                >
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="emotion-17"
                    fill="none"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M1 5.714v4.572C1 11.233 1.768 12 2.714 12H5.75V7.11c0-.566.227-1.108.63-1.504l2.294-2.252c.1-.099.21-.186.326-.262v-.378C9 1.768 8.232 1 7.286 1H5.8v3.429c0 .71-.576 1.285-1.286 1.285H1Zm8-.928L7.257 6.498A.857.857 0 0 0 7 7.11v.688h3.01a.857.857 0 0 0 .857-.858V4h-.717a.857.857 0 0 0-.6.246l-.55.54ZM4.867 1H4.15a.857.857 0 0 0-.601.246L1.257 3.498A.857.857 0 0 0 1 4.11v.688h3.01a.857.857 0 0 0 .857-.858V1ZM7 12V8.714H10.514c.71 0 1.286-.575 1.286-1.285V4h1.486C14.233 4 15 4.768 15 5.714v7.572c0 .947-.768 1.714-1.714 1.714H8.714A1.714 1.714 0 0 1 7 13.286V12Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  Copy page
                </div>
              </button>
              <button
                aria-controls=""
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="More options"
                class="lg-ui-button-0000 emotion-18"
                data-lgid="lg-split_button-trigger"
                data-testid="lg-split_button-trigger"
                type="button"
              >
                <div
                  class="emotion-15"
                />
                <div
                  class="emotion-16"
                >
                  <svg
                    aria-label="Caret Down Icon"
                    class="emotion-21"
                    fill="none"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.679 10.796a.554.554 0 0 1-.858 0L4.64 6.976C4.32 6.594 4.582 6 5.069 6h6.362c.487 0 .748.594.43.976l-3.182 3.82Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </button>
              <span
                class="emotion-22"
              />
            </div>
          </div>
          <p
            class="emotion-23"
          >
            Content for step 6
          </p>
        </section>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          7
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <section>
          <div
            class="emotion-8"
          >
            <h1
              class="contains-headerlink emotion-9"
              weight="medium"
            >
              Step 7
              <a
                class="headerlink emotion-10"
                href="#step-7"
                title="Permalink to this heading"
              >
                <svg
                  aria-label="Link Icon"
                  class="emotion-11"
                  fill="none"
                  height="12"
                  role="img"
                  viewBox="0 0 16 16"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.039 9.953a3.596 3.596 0 0 1-.327-.38l1.45-1.445a1.553 1.553 0 0 0 2.496.423l2.885-2.87a1.57 1.57 0 0 0 .01-2.213 1.553 1.553 0 0 0-2.203-.01l-.379.377A.995.995 0 0 1 8.56 3.83a1.005 1.005 0 0 1 .006-1.418l.38-.377a3.542 3.542 0 0 1 5.024.023 3.58 3.58 0 0 1-.022 5.047l-2.884 2.871a3.542 3.542 0 0 1-5.025-.022Z"
                    fill="currentColor"
                  />
                  <path
                    d="M9.961 6.047c.12.12.228.248.327.38l-1.45 1.445a1.553 1.553 0 0 0-2.496-.423l-2.885 2.87a1.57 1.57 0 0 0-.01 2.213 1.553 1.553 0 0 0 2.203.01l.379-.377a.995.995 0 0 1 1.411.006 1.005 1.005 0 0 1-.006 1.418l-.38.377a3.542 3.542 0 0 1-5.024-.023 3.58 3.58 0 0 1 .022-5.047l2.884-2.871a3.542 3.542 0 0 1 5.025.022Z"
                    fill="currentColor"
                  />
                </svg>
                <div
                  class="emotion-12"
                  id="step-7"
                />
              </a>
            </h1>
            <div
              class="emotion-13"
              data-lgid="lg-split_button"
              data-testid="lg-split_button"
            >
              <button
                aria-disabled="false"
                class="lg-ui-button-0000 emotion-14"
                data-lgid="lg-split_button-button"
                data-testid="lg-split_button-button"
                type="button"
              >
                <div
                  class="emotion-15"
                />
                <div
                  class="emotion-16"
                >
                  <svg
                    alt=""
                    aria-hidden="true"
                    class="emotion-17"
                    fill="none"
                    height="16"
                    role="presentation"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M1 5.714v4.572C1 11.233 1.768 12 2.714 12H5.75V7.11c0-.566.227-1.108.63-1.504l2.294-2.252c.1-.099.21-.186.326-.262v-.378C9 1.768 8.232 1 7.286 1H5.8v3.429c0 .71-.576 1.285-1.286 1.285H1Zm8-.928L7.257 6.498A.857.857 0 0 0 7 7.11v.688h3.01a.857.857 0 0 0 .857-.858V4h-.717a.857.857 0 0 0-.6.246l-.55.54ZM4.867 1H4.15a.857.857 0 0 0-.601.246L1.257 3.498A.857.857 0 0 0 1 4.11v.688h3.01a.857.857 0 0 0 .857-.858V1ZM7 12V8.714H10.514c.71 0 1.286-.575 1.286-1.285V4h1.486C14.233 4 15 4.768 15 5.714v7.572c0 .947-.768 1.714-1.714 1.714H8.714A1.714 1.714 0 0 1 7 13.286V12Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                  Copy page
                </div>
              </button>
              <button
                aria-controls=""
                aria-disabled="false"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="More options"
                class="lg-ui-button-0000 emotion-18"
                data-lgid="lg-split_button-trigger"
                data-testid="lg-split_button-trigger"
                type="button"
              >
                <div
                  class="emotion-15"
                />
                <div
                  class="emotion-16"
                >
                  <svg
                    aria-label="Caret Down Icon"
                    class="emotion-21"
                    fill="none"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.679 10.796a.554.554 0 0 1-.858 0L4.64 6.976C4.32 6.594 4.582 6 5.069 6h6.362c.487 0 .748.594.43.976l-3.182 3.82Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </button>
              <span
                class="emotion-22"
              />
            </div>
          </div>
          <p
            class="emotion-23"
          >
            Content for step 7
          </p>
        </section>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders with "normal" or YAML steps styling 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin-top: 16px;
}

.dark-theme .emotion-0 {
  color: #E8EDEB;
  background-color: #001E2B;
}

.emotion-1 {
  gap: 16px;
}

.emotion-1 h2,
.emotion-1 h4,
.emotion-1 h5,
.emotion-1 h6 {
  margin-top: unset;
}

.emotion-1 h3 {
  margin-top: 2px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  position: relative;
  min-height: 59px;
}

.emotion-4 {
  border: 1.5px solid #C1C7C6;
  font-weight: 500;
  font-size: 16px;
  line-height: 28px;
  background-color: inherit;
  color: var(--opposite-color);
  height: 27px;
  width: 27px;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 50%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 section>*,
.emotion-6 ol p,
.emotion-6 ul p {
  margin-bottom: 16px;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 0;
}

.emotion-8 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
  color: var(--font-color-primary);
}

.emotion-8 strong,
.emotion-8 b {
  font-weight: 700;
}

.emotion-10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-10>span>code,
.emotion-10>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-10:focus,
.emotion-10:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-10:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-10:hover {
  text-decoration-color: #E8EDEB;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          1
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <p
          class="emotion-8"
        >
          Connect to a MongoDB deployment hosted on MongoDB Atlas, or a deployment hosted locally on your own machine.
        </p>
        <p
          class="emotion-8"
        >
          <a
            class="emotion-10"
            href="/connect/#std-label-connect-run-compass"
          >
            To learn more, see Connect to MongoDB
          </a>
        </p>
      </div>
    </div>
    <div
      class="emotion-1 emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          2
        </div>
      </div>
      <div
        class="emotion-6 emotion-7"
      >
        <p
          class="emotion-8"
        >
          Import data from CSV or JSON files into your MongoDB database.
        </p>
        <p
          class="emotion-8"
        >
          <a
            class="emotion-10"
            href="/import-export/#std-label-compass-import-export"
          >
            To learn more, see Import and Export Data
          </a>
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
